[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Menu/PlayButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/menu/Fundo.png" type="Texture" id=3]
[ext_resource path="res://assets/menu/Titulo.png" type="Texture" id=4]
[ext_resource path="res://scenes/Menu/ExitButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Menu/FadeIn.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Menu/OptionsButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Menu/MenuButton.gd" type="Script" id=8]
[ext_resource path="res://scenes/Menu/TitleScreen.gd" type="Script" id=9]
[ext_resource path="res://assets/menu/Botao.png" type="Texture" id=10]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = -0.206111
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1024.0
margin_bottom = 259.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 263.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 1024.0
margin_bottom = 337.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24

[node name="TextureRect" type="TextureRect" parent="Menu/CenterRow/Buttons"]
margin_right = 1024.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
texture = ExtResource( 10 )
stretch_mode = 4

[node name="PlayButton" parent="Menu/CenterRow/Buttons/TextureRect" instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
rect_min_size = Vector2( 360, 60 )
rect_rotation = 0.0
mouse_default_cursor_shape = 2
script = ExtResource( 8 )

[node name="TextureRect2" type="TextureRect" parent="Menu/CenterRow/Buttons"]
margin_top = 84.0
margin_right = 1024.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 60 )
texture = ExtResource( 10 )
stretch_mode = 4

[node name="OptionsButton" parent="Menu/CenterRow/Buttons/TextureRect2" instance=ExtResource( 7 )]
rect_min_size = Vector2( 360, 60 )
rect_rotation = 0.0
mouse_default_cursor_shape = 2
script = ExtResource( 8 )
scene_to_load = "res://scenes/Menu/OptionsScreen.tscn"

[node name="TextureRect4" type="TextureRect" parent="Menu/CenterRow/Buttons"]
margin_top = 168.0
margin_right = 1024.0
margin_bottom = 228.0
rect_min_size = Vector2( 0, 60 )
texture = ExtResource( 10 )
stretch_mode = 4

[node name="ExitButton" parent="Menu/CenterRow/Buttons/TextureRect4" instance=ExtResource( 5 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
mouse_default_cursor_shape = 2

[node name="FadeIn" parent="." instance=ExtResource( 6 )]
margin_left = -1.88774
margin_top = -0.00679084
margin_right = -1.8877
margin_bottom = -0.0067749
mouse_filter = 2

[connection signal="pressed" from="Menu/CenterRow/Buttons/TextureRect/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/TextureRect2/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/TextureRect4/ExitButton" to="." method="_on_ExitButton_pressed"]
